@@ -1,8 +1,17 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:plone="http://namespaces.plone.org/plone">
 
+  <genericsetup:registerProfile
+      name="default"
+      title="Products.RhaptosForums"
+      directory="profiles/default"
+      description="Extension profile for Products.RhaptosForums."
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+ 
   <!-- 
     Re-enable when we hit Plone3. Until such time we subscribe to
     our own custom event which emulates that functionality. See the
