@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_skins" meta_type="Plone Skins Tool">
+  <object name="rhaptosforums" meta_type="Filesystem Directory View"
+      directory="Products.RhaptosForums/skins/rhaptosforums"/>
+  <skin-path name="*">
+    <layer name="rhaptosforums" insert-after="custom"/>
+  </skin-path>
+</object>
+
